fix: buttons view on mobile (#241)
* fix:  add @media query which hides details.

Hidden:
- exercise id
- notebook id
- number of errors
- reduce exercise name font size.

--- a/lms/static/my.css
+++ b/lms/static/my.css
@@ -793,3 +793,18 @@ code .grader-add .fa {
 #user .user-details {
   margin-bottom: 5em;
 }
+
+@media screen and (max-width: 768px) {
+  .exercise-id {
+    display: none;
+  }
+  .which-notebook {
+    display: none;
+  }
+  .comments-count {
+    display: none;
+  }
+  .ex-title {
+    font-size: 1rem;
+  }
+}
